--- a/Python_Project_1.ipynb
+++ b/Python_Project_1.ipynb
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "ugN3KIuWNziE"
       },
@@ -200,7 +200,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,6 +219,144 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def pin_exchange():\n",
+        "  import random\n",
+        "\n",
+        "  card_number = int (input(\"Enter card number :\"))\n",
+        "\n",
+        "  OTP = random.randint(0000,9999)\n",
+        "  print(OTP)\n",
+        "\n",
+        "  enter_OTP =eval(input(\"Enter OTP Send To Your Registered Mobile Number :\"))\n",
+        "  if OTP == enter_OTP:\n",
+        "\n",
+        "      old_pin =int(input(\"Enter your old pin :\"))\n",
+        "      new_pin =int(input(\"Enter your new pin :\"))\n",
+        "      x= old_pin\n",
+        "      y = new_pin\n",
+        "\n",
+        "      if x == y:\n",
+        "        print(\"Enter pin is same as old pin\")\n",
+        "        print(\"Try Different Pin\")\n",
+        "        exit()\n",
+        "      else:\n",
+        "        print(\"Pin changed Successfully \")\n",
+        "        print(\"Your new pin is :\",y)\n",
+        "\n",
+        "\n",
+        "  else:\n",
+        "    print(\"Entered OTP did not Match , Try Again \")\n",
+        "    print(\"Thank you\")\n",
+        "    exit()"
+      ],
+      "metadata": {
+        "id": "8MqZZpGWyZXt"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pin_exchange()"
+      ],
+      "metadata": {
+        "id": "wxC2omxCzSxk",
+        "outputId": "2decf076-1fad-44a5-e404-00a414f7959f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter card number :6775\n",
+            "8344\n",
+            "Enter OTP Send To Your Registered Mobile Number :8344\n",
+            "Enter your old pin :1234\n",
+            "Enter your new pin :4321\n",
+            "Pin changed Successfully \n",
+            "Your new pin is : 4321\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def block_card():\n",
+        "  card_number = input (\"Enter Your Card Number : \")\n",
+        "  import random\n",
+        "  OTP = random.randint(1000,9999)\n",
+        "  print(OTP)\n",
+        "  My_OTP = int(input(\"Enter recived OTP your Registered mobile number :\"))\n",
+        "\n",
+        "  #match the otp\n",
+        "\n",
+        "  if OTP !=My_OTP:\n",
+        "    print(\"Entered OTP did not match \")\n",
+        "    print(\"Try Again\")\n",
+        "    return\n",
+        "    print(\"********************************************************************************\")\n",
+        "  mobile_number = input(\"Enter Your Mobile Number :\")\n",
+        "  print(\"\\n Your card number is :\",card_number,\"And your Mobile Numer is :\",mobile_number)\n",
+        "  print(\"**********************************************************************************\")\n",
+        "  #conformation from customer to block card\n",
+        "  print(\" To Conform Entered Details enter \\'1\\' otherwise enter \\'0\\'\")\n",
+        "  conform = int(input(\"\"))\n",
+        "  if conform ==1:\n",
+        "    print(\"Your card will be blocked in 24 Hours\")\n",
+        "    print(\"you can request for new card from your Regiestered Mobile Number.\")\n",
+        "    print(\"********************************************************************************\")\n",
+        "  elif conform == 0:\n",
+        "    print(\"Sorry your card will not be blocked.\")"
+      ],
+      "metadata": {
+        "id": "P94Rn8_8zdxT"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "block_card()"
+      ],
+      "metadata": {
+        "id": "VK0Jfe071rsS",
+        "outputId": "7f1e413b-8580-4431-854e-b78ea6ea1cc4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter Your Card Number : 43245\n",
+            "2415\n",
+            "Enter recived OTP your Registered mobile number :2415\n",
+            "Enter Your Mobile Number :9876543210\n",
+            "\n",
+            " Your card number is : 43245 And your Mobile Numer is : 9876543210\n",
+            "**********************************************************************************\n",
+            " To Conform Entered Details enter '1' otherwise enter '0'\n",
+            "1\n",
+            "Your card will be blocked in 24 Hours\n",
+            "you can request for new card from your Regiestered Mobile Number.\n",
+            "********************************************************************************\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
@@ -226,7 +364,7 @@
       "collapsed_sections": [],
       "name": "Python Project_1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNYnXr7JPVHMZGq8eraEk6l",
+      "authorship_tag": "ABX9TyMe1WxLxds4O2lRhnTBMtfO",
       "include_colab_link": true
     },
     "kernelspec": {
